# Segurito_RLP2025

./: README.md  esquema_video.txt  testing_and_validation.txt
src/segurito/: CMakeLists.txt  package.xml
src/segurito/launch/: segurito.launch.py
src/segurito/src/: alert_manager_node.cpp  battery_monitor_node.cpp  camera_vision_node.cpp  encoder_node.cpp  map_server_node.cpp  motion_sensor_node.cpp  motor_controller_node.cpp  navigation_node.cpp  odometry_node.cpp  slam_node.cpp
src/segurito_bringup/: package.xml  setup.cfg  setup.py
src/segurito_description/: package.xml  setup.cfg  setup.py
src/segurito_description/config/: diff_drive.yaml
src/segurito_description/urdf/: segurito.urdf  segurito.urdf.xacro
src/segurito_gazebo/: package.xml  setup.cfg  setup.py
src/segurito_gazebo/launch/: segurito_gazebo.launch.py
